k8s/overlays/local/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bigip-telemetry
$patch: delete
